new review form and review features almost done

--- a/Interface/WindowsApplication1/WindowsApplication1.vbproj
+++ b/Interface/WindowsApplication1/WindowsApplication1.vbproj
@@ -117,6 +117,12 @@
     <Compile Include="Register.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Review.Designer.vb">
+      <DependentUpon>Review.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Review.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Usr.vb" />
   </ItemGroup>
   <ItemGroup>
@@ -137,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Review.resx">
+      <DependentUpon>Review.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
