--- a/Interface/WindowsApplication1/WindowsApplication1.vbproj
+++ b/Interface/WindowsApplication1/WindowsApplication1.vbproj
@@ -75,6 +75,18 @@
   <ItemGroup>
     <Compile Include="Countries.vb" />
     <Compile Include="Filmmaker.vb" />
+    <Compile Include="FilmmakerUnregisterd.Designer.vb">
+      <DependentUpon>FilmmakerUnregisterd.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FilmmakerUnregisterd.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilmmakerUser.Designer.vb">
+      <DependentUpon>FilmmakerUser.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FilmmakerUser.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Globals.vb" />
     <Compile Include="Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
@@ -123,9 +135,28 @@
     <Compile Include="Review.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ReviewO.vb" />
+    <Compile Include="Search.Designer.vb">
+      <DependentUpon>Search.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Search.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User.Designer.vb">
+      <DependentUpon>User.vb</DependentUpon>
+    </Compile>
+    <Compile Include="User.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Usr.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FilmmakerUnregisterd.resx">
+      <DependentUpon>FilmmakerUnregisterd.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FilmmakerUser.resx">
+      <DependentUpon>FilmmakerUser.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
@@ -146,6 +177,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Review.resx">
       <DependentUpon>Review.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Search.resx">
+      <DependentUpon>Search.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="User.resx">
+      <DependentUpon>User.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
